syntax = "proto3";

option csharp_namespace = "NeoAlexandriaService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string Service = 1;
  uint64 Uptime =2;
  uint64 BakedFileServiceMaxBuffer =3;
  string HostName=4;
}
